# gif-toolkit

./: .gitignore  ARCHITECTURE.md  BUILDING.md  BUILD_AND_TEST.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  README.zh-CN.md  index.html
.github/workflows/: build-gui.yml  build.yml
docs/: CORE_API.md  GOALS.md
examples/: create_gif.rs  gif_io.rs
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/cli/: mod.rs
src/core/: mod.rs
src/io/: mod.rs
src/operations/: compress.rs  info.rs  mod.rs  speed.rs  tune.rs
src/utils/: mod.rs
tests/: integration_test.rs
