[package]
name = "gif-toolkit-gui"
version = "0.1.0"
edition = "2021"
authors = ["sanbu <physicoada@gmail.com>"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gif-toolkit = { path = ".." }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
